@@ -1,3 +1,5 @@
+	* fixed total_wanted bug (when setting file priorities in add_torrent_params)
+
 1.0.6 release
 
 	* fixed uTP vulnerability
